<resources>
    <string name="app_name">dev kits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_app_bar">Bottom App Bar</string>
    <string name="bottom_appbar_without_floating_action_bar">Bottom appbar without floating action bar</string>
    <string name="action_search">Search</string>
    <string name="action_mail">mail</string>
    <string name="action_delete">Delete</string>
    <string name="action_archieve">archive</string>
    <string name="toggle">toggle</string>
    <string name="nav_item1">item one</string>
    <string name="nav_item2">item two</string>
    <string name="nav_item3">item three</string>
    <string name="nav_item4">item four</string>
    <string name="nav_item5">item five</string>
    <string name="nav_item6">item six</string>
    <string name="nav_item7">item seven</string>
    <string name="nav_item8">item eight</string>
    <string name="nav_item9">item nine</string>
    <string name="nav_item10">item ten</string>
    <string name="nav_item11">item eleven</string>
    <string name="nav_item12">item twelve</string>
    <string name="nav_item13">item thirteen</string>
    <string name="bottom_sheet_name">Exceptos</string>
    <string name="bottom_sheet_email">teamexceptos@gmail.com</string>
    <string name="primary_screen_text">Primary Screen</string>
    <string name="secondary_sceen_text">Secondary  Screen</string>
    <string name="text_button">Text Button</string>
    <string name="text_button_with_icon">Text Button with Icon</string>
    <string name="outline_button">Outlined Button</string>
    <string name="outline_button_with_icon">Outlined Button with icon</string>
    <string name="contained_button">Contained Button</string>
    <string name="contained_button_with_icon">Contained Button with icon</string>
    <string name="toggle_button">Toggle button</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="text_fields">Text fields</string>
    <string name="filled_text_field">Filled Text field</string>
    <string name="user_name">user name</string>
    <string name="filled_text_field_with_icon">Filled Text field with icon</string>
    <string name="outline_text_field_with_icon">Outlined Text field with icon</string>
    <string name="outline_text_field">Outlined Text field</string>
    <string name="auto_complete">Auto complete</string>
    <string name="outlined_text_field_with_autocomplete">Outlined Text field with AutoComplete</string>
    <string name="dialogs">Dialogs</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="simple_dialogs_can_display_items_that_are_immediately_actionable_when_selected">Simple dialogs can display items that are immediately actionable when selected</string>
    <string name="show">SHOW</string>
    <string name="alert_dialogs_interrupt_users_with_urgent_information_details_or_actions">Alert dialogs interrupt users with urgent information, details, or actions.</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="provide_final_confirmation_for_user_s_choices">Provide final confirmation for user\'s choices.</string>
    <string name="multi_choice_confirmation_dialog">Multi-choice Confirmation Dialog</string>
    <string name="provides_more_than_one_final_choice_for_users">Provides more than one final choice for users</string>
    <string name="full_screen_dialog">Full-screen Dialog</string>
    <string name="these_take_up_the_entire_screen_showing_a_group_of_tasks">These take up the entire screen, showing a group of tasks</string>
    <string name="modal_bottom_sheet_dialog">Modal-Bottom Sheet Dialog</string>
    <string name="these_appear_at_the_bottom_ensuring_comfort_for_users_on_larger_devices">These appear at the bottom, ensuring comfort for users on larger devices</string>
    <string name="buttons">Buttons</string>
    <string name="sliders">Sliders</string>
    <string name="continuous_slider">Continuous slider</string>
    <string name="discrete_slider">Discrete slider</string>
    <string name="favorite">Favorite</string>
    <string name="chips">Chips</string>
    <string name="normal_chip">Normal Chip</string>
    <string name="entry_chip">Entry Chip</string>
    <string name="entry_chip_instro">This type of chip represents a piece of info in compact form.</string>
    <string name="filter_chip">Filter Chip</string>
    <string name="filter_chip_instro">Usually contains a tag to filter a collection.</string>
    <string name="choice_chip">Choice Chip</string>
    <string name="choice_chip_instro">Used when making one selection from a group of options.</string>
    <string name="action_chip">Action Chip</string>
    <string name="action_chip_instro">Use to trigger an action in the current context.</string>
    <string name="chip_group">Chip Group</string>
    <string name="chip_group_instro">Contains a number of chips</string>
    <string name="filter_chip_group">Filter Chip Group</string>
    <string name="filter_group_instro">Filters a collection based on user\'s choices</string>
    <string name="choice_chip_group">Choice Chip Group</string>
    <string name="choice_group_instro">Allows one selection from a group of options.</string>
    <string name="user_email">userisbomombastic@gmail.com</string>
    <string name="bombastic_user">Bombastic User</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_drawer_instro">Click below to open the navigation drawer</string>
    <string name="open_drawer">OPEN DRAWER</string>
    <string name="eat">Eat</string>
    <string name="code">Code</string>
    <string name="sleep">Sleep</string>
    <string name="repeat">Repeat</string>
</resources>
