<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/sliders"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:fontFamily="@font/montserrat_semi_bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="6dp"
                android:text="@string/continuous_slider"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/continuous_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="17dp"
                android:layout_weight="1"
                android:valueFrom="0"
                android:valueTo="10" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="6dp"
                android:text="@string/discrete_slider"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.Slider
                android:id="@+id/discrete_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="17dp"
                android:layout_weight="1"
                android:stepSize="2"
                android:valueFrom="0"
                android:valueTo="10" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>